--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <h1>IP Address Tracker</h1> 
         <div class="form-input">
           <input type="text" name="" id="entradaIP"
-          placeholder="Search for any IP address or domain" 
+          placeholder="Search any (domain/IP) or just press next ;)" 
           />
           <button type="submit">
             <img src="/images/icon-arrow.svg" alt="Arrow">
